agregar dependencias para notif

--- a/eje_agenda/android/app/src/main/AndroidManifest.xml
+++ b/eje_agenda/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application
         android:label="eje_agenda"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <receiver android:name="com.dexterous.flutterlocalnotifications.FlutterLocalNotificationsPlugin" 
+          android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
