--- a/eje_agenda/pubspec.yaml
+++ b/eje_agenda/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   sqflite: ^2.3.3+1
   intl: ^0.20.1
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
